--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,16 +4,20 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Jenkins-Transfers-Testing"
-version = "0.0.01"
+version = "0.0.4"
 description = "Transfers Job b/w Jenkins Servers with relevant Views & Plugins"
 readme = "README.md"
 license = {text = "MIT License"}
 authors = [
     {name = "Joel Thomas Chacko", email = "joeltc071@gmail.com"}
 ]
+maintainers = [
+    {name = "Joel Thomas Chacko", email = "joeltc071@gmail.com"}
+]
+
 dependencies = [
-    "python-jenkins == 1.8.2",
-    "lxml == 5.1.0"
+    "python-jenkins==1.8.2",
+    "lxml==5.1.0"
 ]
 requires-python = ">=3.6"
 classifiers = [
@@ -21,11 +25,12 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent"
 ]
+keywords = ["Jenkins", "CICD", "Jenkins-Transfer", "Servers", "TransferJobs", "Plugins"]
 
 [tool.setuptools.packages.find]
 where = ["."]
 
-
 [project.urls]
+Repository = "https://github.com/pypa/sampleproject"
 Homepage = "https://github.com/pypa/sampleproject"
 Issues = "https://github.com/pypa/sampleproject/issues"
