--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ maintainers = [
 
 dependencies = [
     "python-jenkins==1.8.2",
-    "lxml==5.1.0"
+    "lxml==5.1.0",
+    "rich==13.7.1"
 ]
 requires-python = ">=3.6"
 classifiers = [
