--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ python_requires = >=3.6
 install_requires =
     python-jenkins==1.8.2
     lxml==5.1.0
+    rich==13.7.1
 
 [options.packages.find]
 where = .
