MOD: Modified Repository URLs

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,11 +12,11 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
 keywords = Jenkins, CICD, Jenkins-Transfer, Servers, TransferJobs, Plugins
-url = https://github.com/pypa/sampleproject
+url = https://context-aware-jenkins-transfers-documentation.readthedocs.io/en/latest/
 project_urls =
-    Repository = https://github.com/pypa/sampleproject
-    Homepage = https://github.com/pypa/sampleproject
-    Issues = https://github.com/pypa/sampleproject/issues
+    Repository = https://github.com/joelkariyalil/Jenkins-Transfers
+    Homepage = https://context-aware-jenkins-transfers-documentation.readthedocs.io/en/latest/
+    Issues = https://github.com/joelkariyalil/Jenkins-Transfers/issues
 
 [options]
 packages = find:
