--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
+
     - uses: actions/checkout@v3
 
     - name: Set up Python
@@ -29,7 +29,7 @@ jobs:
 
     - name: Publish to PyPI
       env:
-        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         python -m pip install --upgrade twine
         python -m twine upload --repository pypi dist/*
