--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,33 +3,28 @@ name: Publish Package
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*'  # Matches any tag starting with 'v'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-
     - uses: actions/checkout@v3
-
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'
-
+        python-version: '3.9'  # Change to your Python version
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
         pip install build
-
     - name: Build the package
       run: |
         python -m build
-
     - name: Publish to PyPI
       env:
-        PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         python -m pip install --upgrade twine
-        python -m twine upload --repository pypi dist/*
+        python -m twine upload --repository pypi --username __token__ --password $TWINE_PASSWORD dist/*
