--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Jenkins-Transfers-Testing"
-version = "0.0.6"
-description = "Transfers Job b/w Jenkins Servers with relevant Views & Plugins"
+name = "Context-Aware-Jenkins-Job-Transfers"
+version = "1.0.0"
+description = "Transfers Jobs b/w Jenkins Servers with relevant Views & Plugins"
 readme = "README.md"
 license = {text = "MIT License"}
 authors = [
