--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish Package
 on:
   push:
     tags:
-      - 'v*'  # Matches any tag starting with 'v'
+      - '*.*.*'
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.9'  # Change to your Python version
+        python-version: '3.9'
     - name: Install build tools
       run: |
         python -m pip install --upgrade pip
