--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "Context-Aware-Jenkins-Job-Transfers"
-version = "1.0.1"
+version = "1.0.2"
 description = "Transfers Jobs b/w Jenkins Servers with relevant Views & Plugins"
 readme = "README.md"
 license = {text = "MIT License"}
@@ -12,7 +12,7 @@ authors = [
     {name = "Joel Thomas Chacko", email = "joeltc071@gmail.com"}
 ]
 maintainers = [
-    {name = "Joel Thomas Chacko", email = "joeltc071@gmail.com"}
+    {name = "Joel Thomas Chacko", email = "joelkariyalil@gmail.com"}
 ]
 
 dependencies = [
