MOD: Reconfiguration to initially obtain connection with each server before proceeding with test cases

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,9 @@ install_requires =
     python-jenkins==1.8.2
     lxml==5.1.0
     rich==13.7.1
+    pytest
+    pytest-dependency
+    pytest-order
 
 [options.packages.find]
 where = .
