--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ maintainers = [
 dependencies = [
     "python-jenkins==1.8.2",
     "lxml==5.1.0",
-    "rich==13.7.1"
+    "rich==13.7.1",
+    "pytest",
+    "pytest-dependency",
+    "pytest-order"
 ]
 requires-python = ">=3.6"
 classifiers = [
