--- a/setup.cfg
+++ b/setup.cfg
@@ -1,15 +1,15 @@
 [metadata]
 name = Context-Aware-Jenkins-Job-Transfers
-version = 1.0.3
+version = 1.1.0b
 description = Transfers Job b/w Jenkins Servers with relevant Views & Plugins
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Joel Thomas Chacko
 author_email = joeltc071@gmail.com
-license = MIT
+license_files = LICENSE
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 keywords = Jenkins, CICD, Jenkins-Transfer, Servers, TransferJobs, Plugins
 url = https://context-aware-jenkins-transfers-documentation.readthedocs.io/en/latest/
@@ -25,8 +25,8 @@ install_requires =
     python-jenkins==1.8.2
     lxml==5.1.0
     rich==13.7.1
-    pytest
-    pytest-dependency
+    pytest==8.3.4
+    pytest-order==1.3.0
 
 [options.packages.find]
 where = .
