--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = Context-Aware-Jenkins-Job-Transfers
-version = 1.1.0b
+version = 1.1.0b1
 description = Transfers Job b/w Jenkins Servers with relevant Views & Plugins
 long_description = file: README.md
 long_description_content_type = text/markdown
