--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,7 @@ dependencies = [
     "python-jenkins==1.8.2",
     "lxml==5.1.0",
     "rich==13.7.1",
-    "pytest==8.3.4",
-    "pytest-order==1.3.0"
+    "pytest==8.3.4"
 ]
 requires-python = ">=3.6"
 classifiers = [
